creatre new branch for development

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,6 @@
 name: Actions Workflow
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   run-github-actions:
@@ -10,8 +10,8 @@ jobs:
         run: |
           pwd
           ls -a
-          echo $GITHUB_SHA
-          echo $GITHUB_REPOSITORY
+          echo $GITHUB_SHA                                     # commit id
+          echo $GITHUB_REPOSITORY                              # name of our repository 
           echo $GITHUB_WORKSPACE
           echo "{{ github.token }}"
       - name: simple JS Action
